--- a/HomeWorks/css/home_works.scss
+++ b/HomeWorks/css/home_works.scss
@@ -37,7 +37,7 @@
 .parent_block {
 	height: 500px;
 	width: 500px;
-	border: 2px solid orange;
+	border: 2px solid cyan;
 	position: relative;
 	margin: 0 auto;
 }
@@ -46,7 +46,7 @@
 	position: absolute;
 	width: 50px;
 	height: 50px;
-	background: red;
+	background: yellow;
 }
 
 .inner_move_block {
@@ -62,7 +62,7 @@
 	font-size: 80px;
 	height: 100px;
 	width: 100%;
-	border-bottom: 1px solid orange;
+	border-bottom: 1px solid cyan;
 	margin-top: 40px;
 }
 
@@ -105,14 +105,14 @@
 				justify-content: space-around;
 				flex-direction: column;
 				align-items: center;
-				border: solid 2px orange;
+				border: solid 2px cyan;
 				border-radius: 20px;
 
 				&_img {
 					margin: 20px;
 					height: 150px;
 					width: 150px;
-					border: solid 2px orange;
+					border: solid 2px cyan;
 					border-radius: 100px;
 				}
 
