--- a/HomeWorks/css/information.scss
+++ b/HomeWorks/css/information.scss
@@ -1,25 +1,31 @@
 .information {
 	padding: 100px 0;
 	background: black;
+	h2 {
+		color: white;
+	}
 	&_block{
 		display: grid;
-		grid-template-columns: auto auto;
+		grid-template-columns: 1fr 1fr;
 		margin: 50px;
-		column-gap: 50px;
+		gap: 50px;
 		&_content {
-			padding: 10px;
-			border: solid 2px orange;
+			padding: 20px;
+			border: solid 2px cyan;
 			border-radius: 15px;
+			color: white;
+			
 			& h2 {
+				font-size: 32px;
 				text-transform: none;
-				color: orange;
-			}
-			& span {
-				margin-top: 30px;
-				color: white;
-				& b {
-					text-decoration: solid;
+				color: cyan;
+				margin: 20px 0px;
+				&:hover {
+					color: rgb(150, 255, 255);
 				}
+			}
+			& p b {
+				color:cyan;
 			}
 		}
 	}
