--- a/HomeWorks/css/lessons.css
+++ b/HomeWorks/css/lessons.css
@@ -10,7 +10,7 @@
     margin-top: 50px;
     display: flex;
     justify-content: space-evenly;
-    border: 1px solid orange;
+    border: 1px solid cyan;
     height: 300px;
     border-radius: 20px;
     align-items: center;
@@ -36,7 +36,7 @@
 
 .tab_content_block {
     width: 700px;
-    border: 1px solid orange;
+    border: 1px solid cyan;
     padding: 20px;
     border-radius: 10px;
     text-align: center;
@@ -64,7 +64,7 @@
     padding: 10px;
     height: 30px;
     color: white;
-    border: 1px solid orange;
+    border: 1px solid cyan;
     text-align: center;
     font-size: 20px;
     cursor: pointer;
@@ -73,7 +73,7 @@
 }
 
 .tab_content_item_active {
-    background: orange;
+    background: cyan;
     color: black;
     font-weight: 600;
     border: 1px solid white;
