--- a/HomeWorks/css/style.css
+++ b/HomeWorks/css/style.css
@@ -25,7 +25,7 @@
   height: 60px;
   width: -moz-fit-content;
   width: fit-content;
-  background: orange;
+  background: cyan;
   padding: 8px;
   color: white;
   border-radius: 5px;
@@ -37,7 +37,7 @@
   width: 600px;
 }
 .header_inner_menu_link a {
-  color: orange;
+  color: cyan;
   text-transform: uppercase;
 }
 .header_inner_menu_link a:hover {
@@ -59,7 +59,7 @@
 
 .btn-color {
   border-radius: 20px;
-  border-color: white !important;
+  border-color: cyan !important;
 }
 
 /* FOOTER */
@@ -77,7 +77,7 @@
 
 .footer h2 {
   text-transform: uppercase;
-  color: #F79300;
+  color: cyan;
   font-weight: 600;
 }
 
@@ -92,7 +92,7 @@
   width: 100%;
   height: 300px;
   overflow: hidden;
-  border: 3px solid orange;
+  border: 3px solid cyan;
   border-radius: 20px;
   display: flex;
   align-items: center;
@@ -130,7 +130,7 @@
 }
 
 .slide_card a {
-  color: orange;
+  color: cyan;
   text-decoration: underline;
 }
 
@@ -169,7 +169,7 @@
   width: 100%;
   padding: 40px;
   background-color: black;
-  border: 2px solid orange;
+  border: 2px solid cyan;
   border-radius: 4px;
   max-height: 80vh;
   overflow-y: auto;
