--- a/HomeWorks/css/lessons.css
+++ b/HomeWorks/css/lessons.css
@@ -1,125 +1,148 @@
-
 /* PHONE CHECKER */
-
 .phone_block {
-    background: black;
-    padding: 100px 0;
+  background: black;
+  padding: 100px 0;
 }
 
 .inner_phone_block {
-    margin-top: 50px;
-    display: flex;
-    justify-content: space-evenly;
-    border: 1px solid cyan;
-    height: 300px;
-    border-radius: 20px;
-    align-items: center;
+  margin-top: 50px;
+  display: flex;
+  justify-content: space-evenly;
+  border: 1px solid cyan;
+  height: 300px;
+  border-radius: 20px;
+  align-items: center;
 }
 
 .form_phone {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .form_phone button {
-    width: 100%;
-    margin: 20px 0;
+  width: 100%;
+  margin: 20px 0;
 }
 
 /* TAB SLIDER */
-
 .tab_slider {
-    background: black;
-    padding: 100px 0;
+  background: black;
+  padding: 100px 0;
 }
 
 .tab_content_block {
-    width: 700px;
-    border: 1px solid cyan;
-    padding: 20px;
-    border-radius: 10px;
-    text-align: center;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    justify-content: center;
-    height: 170px;
+  width: 700px;
+  border: 1px solid cyan;
+  padding: 20px;
+  border-radius: 10px;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  height: 170px;
 }
 
 .tab_content_block p {
-    color: white;
-    margin-top: 10px;
-    text-align: justify;
+  color: white;
+  margin-top: 10px;
+  text-align: justify;
 }
 
 .tab_content_items {
-    width: 400px;
-    display: flex;
-    flex-direction: column;
-    row-gap: 5px;
+  width: 400px;
+  display: flex;
+  flex-direction: column;
+  row-gap: 5px;
 }
 
 .tab_content_item {
-    padding: 10px;
-    height: 30px;
-    color: white;
-    border: 1px solid cyan;
-    text-align: center;
-    font-size: 20px;
-    cursor: pointer;
-    display: grid;
-    place-content: center;
+  padding: 10px;
+  height: 30px;
+  color: white;
+  border: 1px solid cyan;
+  text-align: center;
+  font-size: 20px;
+  cursor: pointer;
+  display: grid;
+  place-content: center;
 }
 
 .tab_content_item_active {
-    background: cyan;
-    color: black;
-    font-weight: 600;
-    border: 1px solid white;
+  background: cyan;
+  color: black;
+  font-weight: 600;
+  border: 1px solid white;
 }
 
 .tab_contents_block {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-top: 50px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 50px;
+}
+
+/*--------CONVENTOR--------*/
+.conventor {
+  padding: 100px 0;
+  background-color: black;
+}
+.conventor_inner {
+  margin-top: 50px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 30px;
+}
+.conventor_inner_block {
+  padding: 20px;
+  margin: 10px;
+  border: 2px solid cyan;
+  border-radius: 30px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+.conventor_inner_block input {
+  border-radius: 20px;
+  padding: 0px 30px;
+  font-size: 30px;
+}
+.conventor_inner_block input::-webkit-inner-spin-button, .conventor_inner_block input::-webkit-outer-spin-button {
+  -webkit-appearance: none;
 }
 
 /*------CARD SWITCHER------*/
-
 .card_switcher {
-    background-color: black;
-    padding: 100px 0;
+  background-color: black;
+  padding: 100px 0;
 }
 
 .card {
-    width: 500px;
-    height: 150px;
-    border: 1px solid #F79300;
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
-    padding: 10px;
+  width: 500px;
+  height: 150px;
+  border: 1px solid cyan;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  padding: 10px;
 }
 
 .card p {
-    color: #F79300;
-    font-size: 20px;
+  color: cyan;
+  font-size: 20px;
 }
 
 .card span {
-    color: white;
-    font-size: 30px;
+  color: white;
+  font-size: 30px;
 }
 
 .inner_card_switcher {
-    margin-top: 50px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-
-
+  margin-top: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}/*# sourceMappingURL=lessons.css.map */
