--- a/HomeWorks/css/home_works.css
+++ b/HomeWorks/css/home_works.css
@@ -3,8 +3,7 @@
   background: black;
   padding: 100px 0;
 }
-
-.inner_gmail_block {
+.gmail_block_inner {
   margin-top: 50px;
   display: flex;
   justify-content: space-evenly;
@@ -18,39 +17,52 @@
   flex-direction: column;
   align-items: center;
 }
-
+.form_gmail input {
+  box-shadow: 0 0 20px cyan;
+  border-radius: 20px;
+  padding: 0 20px;
+  margin: 20px 0;
+}
 .form_gmail button {
   width: 100%;
   margin: 20px 0;
 }
 
 /* MOVE BLOCK */
-.move_block {
+.block_move {
   background: black;
   padding: 100px 0;
   position: relative;
 }
-
-.parent_block {
+.block_move_inner {
+  padding-top: 20px;
+  margin-top: 10px;
+}
+.block_parent {
   height: 500px;
   width: 500px;
+  border-radius: 25px;
   border: 2px solid cyan;
   position: relative;
   margin: 0 auto;
+  box-shadow: 0 0 20px cyan;
 }
-
-.child_block {
+.block_child {
   position: absolute;
   width: 50px;
   height: 50px;
-  background: yellow;
-}
-
-.inner_move_block {
-  margin-top: 10px;
+  border: 3px dashed black;
+  border-radius: 50px;
+  background: white;
+  box-shadow: 0 0 15px 1px white, 0 0 10px cyan inset;
 }
 
 /* STOP WATCH */
+.stopwatch {
+  padding: 100px 0;
+  background: black;
+}
+
 .time {
   color: white;
   display: flex;
@@ -58,26 +70,56 @@
   font-size: 80px;
   height: 100px;
   width: 100%;
-  border-bottom: 1px solid cyan;
   margin-top: 40px;
 }
-
 .time_block {
   display: flex;
   width: 500px;
+  text-shadow: 0 0 5px white;
   justify-content: space-between;
 }
-
-.stopwatch {
-  padding: 100px 0;
-  background: black;
+.time_block div {
+  text-align: center;
+  width: 100px;
 }
-
 .time_buttons {
   margin-top: 30px;
   width: 100%;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
+}
+.time_buttons button {
+  box-shadow: none;
+  border-radius: 0px;
+  border: 2px solid cyan;
+  width: 100px;
+  height: 100px;
+  box-shadow: 0 0 10px cyan inset, 0 0 10px cyan;
+  transition: 0.2s;
+}
+.time_buttons #start {
+  border-radius: 40px 0 0 40px;
+  border-right: 1px solid cyan;
+}
+.time_buttons #start:hover {
+  transform: scale(1.05);
+  box-shadow: 0 0 10px cyan inset, 0 0 10px cyan;
+}
+.time_buttons #stop {
+  border-right: 1px solid cyan;
+  border-left: 1px solid cyan;
+}
+.time_buttons #stop:hover {
+  transform: scale(1.05);
+  box-shadow: 0 0 10px cyan inset, 0 0 10px cyan;
+}
+.time_buttons #reset {
+  border-radius: 0 40px 40px 0;
+  border-left: 1px solid cyan;
+}
+.time_buttons #reset:hover {
+  transform: scale(1.05);
+  box-shadow: 0 0 10px cyan inset, 0 0 10px cyan;
 }
 
 /* JSON */
@@ -96,6 +138,8 @@
   gap: 20px;
 }
 .json_block_users_user {
+  box-shadow: 0 0 10px cyan;
+  text-shadow: 0 0 10px white;
   display: flex;
   justify-content: space-around;
   flex-direction: column;
@@ -107,6 +151,7 @@
   margin: 20px;
   height: 150px;
   width: 150px;
+  box-shadow: 0 0 10px cyan;
   border: solid 2px cyan;
   border-radius: 100px;
 }
