--- a/HomeWorks/css/style.scss
+++ b/HomeWorks/css/style.scss
@@ -3,19 +3,21 @@
 
 .header {
 	height: 80px;
-	background: #2c2d2f;
+	background: black;
+	background: linear-gradient(180deg, rgba(0,0,0, 1) 0%, rgba(0,255,255,0.5) 100%);
 	display: flex;
 	align-items: center;
 	width: 100%;
 	position: fixed;
 	top: 0;
 	z-index: 2;
+	border-bottom: 2px solid cyan;
+	box-shadow: 0 0 15px cyan;
 	&_inner {
 		height: 100%;
 		display: flex;
 		align-items: center;
 		justify-content: space-between;
-		
 		/* HEADER LOGOTYPE */
 		
 		&_logotype {
@@ -26,10 +28,15 @@
 			height: 60px;
 			width: fit-content;
 			background: cyan;
+			box-shadow: 0 0 10px cyan;
 			padding: 8px;
-			color: white;
+			color: none;
 			border-radius: 5px;
 			cursor: pointer;
+			&:hover{
+				box-shadow: 0 0 20px cyan;
+				text-shadow: 0 0 20px white;
+			}
 		}
 		
 		/* HEADER MENU */
@@ -42,10 +49,13 @@
 			&_link a {
 				color: cyan;
 				text-transform: uppercase;
+				
+				
 			}
 			
 			&_link a:hover {
 				text-decoration: underline;
+				text-shadow: 0 0 15px cyan;
 			}
 		}
 	}
@@ -64,53 +74,32 @@
 	display: flex;
 	justify-content: space-between;
 	margin-top: 50px;
+	
 }
 
 .btn-color {
+	text-shadow: 0 0 20px white;
 	border-radius: 20px;
-	border-color: cyan !important;
 }
 
 /* FOOTER */
 
 .footer {
 	background: #2c2d2f;
-	width: 100%;
+	padding: 30px 0;
+	h2 {
+		text-transform: uppercase;
+		color: cyan;
+		font-weight: 600;
+	}
+	&_inner {
+		display: flex;
+		align-items: center;
+		justify-content: center;
+	}
 }
-
-.inner_footer {
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	height: 100px;
-}
-
-.footer h2 {
-	text-transform: uppercase;
-	color: cyan;
-	font-weight: 600;
-}
-
 
 /* SLIDER BLOCK */
-
-.slider_block {
-	padding: 100px 0;
-	background: black;
-}
-
-.slider {
-	position: relative;
-	width: 100%;
-	height: 300px;
-	overflow: hidden;
-	border: 3px solid cyan;
-	border-radius: 20px;
-	display: flex;
-	align-items: center;
-	justify-content: space-between;
-	padding: 0 30px;
-}
 
 .slide {
 	position: absolute;
@@ -120,34 +109,63 @@
 	height: 100%;
 	display: none;
 	transition: opacity 0.5s ease-in-out;
-}
+	&_card {
+		color: white;
+		margin: 0 auto;
+		width: 500px;
+		text-align: center;
+		h3 {
+			color: white;
+			text-transform: uppercase;
+			font-size: 22px;
+		}
+		p {
+			font-size: 16px;
+			text-align: justify;
+			margin: 10px 0;
+		}
+		a {
+			color: cyan;
+			text-decoration: underline;
+		}
+		button {
+			background: red;
+		}
+	}
+	&.active_slide {
+		display: block;
+	}
 
-.slide_card {
-    color: white;
-    margin: 0 auto;
-    width: 500px;
-    text-align: center;
-}
-
-.slide_card h3 {
-    color: white;
-    text-transform: uppercase;
-    font-size: 22px;
-}
-
-.slide_card p {
-    font-size: 16px;
-    text-align: justify;
-    margin: 10px 0;
-}
-
-.slide_card a {
-    color: cyan;
-    text-decoration: underline;
-}
-
-.slide.active_slide {
-    display: block;
+	// slide + r = slider
+	&r { 	
+		position: relative;
+		width: 100%;
+		height: 300px;
+		overflow: hidden;
+		border: 3px solid cyan;
+		display: flex;
+		border-radius: 20px;
+		align-items: center;
+		justify-content: space-between;
+		padding: 0 30px;
+		button {
+			border: none;
+			box-shadow: 0 0 20px cyan;
+			transition: 0.1s;
+			&:active {
+				box-shadow: 0 0 15px cyan;
+				transform: scale(1.1);
+			}
+		}
+		&_block {
+			padding: 100px 0;
+			background: black;
+		}
+		&_inner {
+			border-radius: 20px;
+			box-shadow: 0 0 20px cyan;
+		}
+	}
 }
 
 /* VIDEO BLOCK */
@@ -159,6 +177,11 @@
 		display: flex;
 		justify-content: center;
 		margin-top: 50px;
+		iframe {
+			border-radius: 20px;
+			border: 2px solid cyan;
+			box-shadow: 0 0 20px cyan;
+		}
 	}
 }
 
@@ -174,15 +197,18 @@
     background: rgba(0, 0, 0, 0.8);
     display: none;
 	&_dialog {
+		border-radius: 20px;
+		box-shadow: 0 0 20px cyan;
+		text-shadow: 0 0 10px white;
 		max-width: 500px;
 		margin: 150px auto;
 		&_content {
+			border-radius: 20px;
 			position: relative;
 			width: 100%;
 			padding: 40px;
 			background-color: black;
 			border: 2px solid cyan;
-			border-radius: 4px;
 			max-height: 80vh;
 			overflow-y: auto;
 			& form {
@@ -195,12 +221,16 @@
 				top: 8px;
 				right: 14px;
 				font-size: 30px;
+				text-shadow: 0 0 10px red;
 				color: red;
 				opacity: 0.5;
 				font-weight: 700;
 				border: none;
 				background-color: transparent;
 				cursor: pointer;
+				&:hover {
+                    opacity: 1;
+                }
 			}
 			&_title {
 				text-align: center;
@@ -209,8 +239,14 @@
 				color: white;
 			}
 			&_input, .btn_min {
+				border: 2px solid cyan;
 				width: 100% !important;
 				margin-top: 10px;
+				border-radius: 20px;
+				padding: 0 10px;
+				&:hover{
+					
+				}
 			}
 		}
 	}
